--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240707 Zarr writing.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240707 Zarr writing.ipynb
@@ -597,7 +597,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.write()"
+    "s[0, 3, 0] = dummy_value(shape, 33)\n",
+    "# s[1, 0, 0] = dummy_value(shape, 33)\n",
+    "# s[1, 2, 0] = dummy_value(shape, 33)\n",
+    "# s[1, 2, 0] = dummy_value(shape, 33)\n",
+    "# s[1, 3, 0] = dummy_value(shape, 33)"
    ]
   },
   {
@@ -607,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "q.poll()"
+    "s.write()"
    ]
   },
   {
@@ -617,7 +621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.writers"
+    "q.poll()"
    ]
   },
   {
@@ -627,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s._write_queue"
+    "s.writers"
    ]
   },
   {
@@ -637,13 +641,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "group_by_chunks(idxs, chunks, shape)"
+    "s._write_queue"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_by_chunks(idxs, chunks, shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +683,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -769,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -788,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58",
+   "id": "59",
    "metadata": {},
    "source": [
     "# Pipeline"
@@ -806,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -817,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +858,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -917,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -927,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -974,7 +988,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -984,7 +998,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1012,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1032,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72",
+   "id": "73",
    "metadata": {},
    "source": [
     "# Science analysis"
@@ -1041,7 +1055,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "77",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1096,7 +1110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1106,24 +1120,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(\n",
-    "    image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)),\n",
-    "    scale=1,\n",
-    ")"
+    "image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)).shape"
    ]
   },
   {
@@ -1146,7 +1147,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "segmentation_masks[:, 8, 7].squeeze().shape"
+    "display_image(\n",
+    "    image.unstack_multichannel(crops[:, 8, :, 7].squeeze().swapaxes(0, 1)),\n",
+    "    scale=1,\n",
+    ")"
    ]
   },
   {
@@ -1156,13 +1160,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np."
+    "segmentation_masks[:, 8, 7].squeeze().shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1184,7 +1198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1194,7 +1208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1204,7 +1218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1214,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1224,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1249,7 +1263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1287,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1288,7 +1302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1340,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1373,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1389,26 +1403,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image.unstack(crops[:, 8, :, 417].squeeze(), axis=1).shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
-    "display_image(\n",
-    "    image.unstack_multichannel(\n",
-    "        crops[10:, 8, :, 417].squeeze().swapaxes(0, 1),\n",
-    "    ),\n",
-    "    downsample=4,\n",
-    ")"
+    "image.unstack(crops[:, 8, :, 417].squeeze(), axis=1).shape"
    ]
   },
   {
@@ -1419,13 +1418,10 @@
    "outputs": [],
    "source": [
     "display_image(\n",
-    "    image.unstack(\n",
-    "        skimage.color.label2rgb(\n",
-    "            np.nan_to_num(segmentation_masks[:, 8, 417].squeeze()).astype(np.uint16)\n",
-    "        ),\n",
-    "        axis=2,\n",
+    "    image.unstack_multichannel(\n",
+    "        crops[10:, 8, :, 417].squeeze().swapaxes(0, 1),\n",
     "    ),\n",
-    "    scale=1,\n",
+    "    downsample=4,\n",
     ")"
    ]
   },
@@ -1454,6 +1450,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "display_image(\n",
+    "    image.unstack(\n",
+    "        skimage.color.label2rgb(\n",
+    "            np.nan_to_num(segmentation_masks[:, 8, 417].squeeze()).astype(np.uint16)\n",
+    "        ),\n",
+    "        axis=2,\n",
+    "    ),\n",
+    "    scale=1,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "107",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%%time\n",
     "dataset = ds.dataset(output_dir / \"measurements\", format=\"parquet\", partitioning=\"hive\")\n",
     "# df = dataset.to_table(filter=ds.field(\"position\") == 14).to_pandas()\n",
@@ -1468,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1488,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1503,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1518,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,7 +1547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1551,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1566,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1576,7 +1590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1586,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1596,7 +1610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1606,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1616,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1626,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1636,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1646,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "123",
+   "id": "124",
    "metadata": {},
    "source": [
     "# Export"
@@ -1666,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "124",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1698,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1719,7 +1733,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "128",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,7 +1747,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1753,7 +1767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1768,7 +1782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130",
+   "id": "131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131",
+   "id": "132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1791,7 +1805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132",
+   "id": "133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133",
+   "id": "134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1816,7 +1830,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134",
+   "id": "135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1826,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135",
+   "id": "136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1837,7 +1851,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136",
+   "id": "137",
    "metadata": {},
    "outputs": [],
    "source": [
