--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240707 Zarr writing.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240707 Zarr writing.ipynb
@@ -611,7 +611,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.write()"
+    "s.write(partial_chunks=True)"
    ]
   },
   {
@@ -631,7 +631,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s.writers"
+    "q._items"
    ]
   },
   {
@@ -641,7 +641,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "s._write_queue"
+    "s.writers"
    ]
   },
   {
@@ -651,13 +651,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "group_by_chunks(idxs, chunks, shape)"
+    "s._write_queue"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = zarr.open_array(\"/home/jqs1/scratch/microscopy/240627/zarr_test/test_store/t=1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z[:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "group_by_chunks(idxs, chunks, shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -668,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "51",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -683,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49",
+   "id": "53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +744,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50",
+   "id": "54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +754,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51",
+   "id": "55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52",
+   "id": "56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53",
+   "id": "57",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54",
+   "id": "58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +802,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55",
+   "id": "59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +812,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56",
+   "id": "60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57",
+   "id": "61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +842,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58",
+   "id": "62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -811,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59",
+   "id": "63",
    "metadata": {},
    "source": [
     "# Pipeline"
@@ -820,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60",
+   "id": "64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61",
+   "id": "65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +898,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62",
+   "id": "66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -903,7 +943,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63",
+   "id": "67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64",
+   "id": "68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -941,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65",
+   "id": "69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66",
+   "id": "70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67",
+   "id": "71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68",
+   "id": "72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69",
+   "id": "73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1012,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70",
+   "id": "74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1024,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71",
+   "id": "75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72",
+   "id": "76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73",
+   "id": "77",
    "metadata": {},
    "source": [
     "# Science analysis"
@@ -1055,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74",
+   "id": "78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75",
+   "id": "79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76",
+   "id": "80",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77",
+   "id": "81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78",
+   "id": "82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79",
+   "id": "83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1130,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80",
+   "id": "84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81",
+   "id": "85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1156,7 +1196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82",
+   "id": "86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1166,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83",
+   "id": "87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84",
+   "id": "88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1228,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85",
+   "id": "89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86",
+   "id": "90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1208,7 +1248,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87",
+   "id": "91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88",
+   "id": "92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,7 +1268,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89",
+   "id": "93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90",
+   "id": "94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1248,7 +1288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91",
+   "id": "95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92",
+   "id": "96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1275,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93",
+   "id": "97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1287,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94",
+   "id": "98",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1302,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95",
+   "id": "99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1316,7 +1356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96",
+   "id": "100",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1326,7 +1366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97",
+   "id": "101",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1339,7 +1379,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98",
+   "id": "102",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99",
+   "id": "103",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1373,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "100",
+   "id": "104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1383,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "101",
+   "id": "105",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1393,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "102",
+   "id": "106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1403,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "103",
+   "id": "107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104",
+   "id": "108",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1428,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "105",
+   "id": "109",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1446,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106",
+   "id": "110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1464,7 +1504,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "107",
+   "id": "111",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1522,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "108",
+   "id": "112",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1532,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109",
+   "id": "113",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1502,7 +1542,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "110",
+   "id": "114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "111",
+   "id": "115",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1532,7 +1572,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "112",
+   "id": "116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1547,7 +1587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113",
+   "id": "117",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "114",
+   "id": "118",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1580,7 +1620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "115",
+   "id": "119",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1630,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "116",
+   "id": "120",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1600,7 +1640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "117",
+   "id": "121",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1610,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "118",
+   "id": "122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1620,7 +1660,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119",
+   "id": "123",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1630,7 +1670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "120",
+   "id": "124",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "121",
+   "id": "125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1650,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "122",
+   "id": "126",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1700,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123",
+   "id": "127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1711,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "124",
+   "id": "128",
    "metadata": {},
    "source": [
     "# Export"
@@ -1680,7 +1720,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "125",
+   "id": "129",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1698,7 +1738,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "126",
+   "id": "130",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127",
+   "id": "131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1733,7 +1773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "128",
+   "id": "132",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1747,7 +1787,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129",
+   "id": "133",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1767,7 +1807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "130",
+   "id": "134",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1782,7 +1822,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "131",
+   "id": "135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1792,7 +1832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "132",
+   "id": "136",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1805,7 +1845,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "133",
+   "id": "137",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1815,7 +1855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134",
+   "id": "138",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1830,7 +1870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135",
+   "id": "139",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1840,7 +1880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "136",
+   "id": "140",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1851,7 +1891,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "137",
+   "id": "141",
    "metadata": {},
    "outputs": [],
    "source": [
