--- a/paulssonlab/src/paulssonlab/shenker/image_analysis/240708 Zarr writing.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/image_analysis/240708 Zarr writing.ipynb
@@ -520,16 +520,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dummy_value((1,), 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "q = delayed.DelayedQueue()\n",
     "s = delayed.DelayedBatchedZarrStore(\n",
     "    q, output_dir / \"test_store/t={1}\", write_options=dict(chunks=(2, 1))\n",
@@ -545,26 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "q = delayed.DelayedQueue()\n",
-    "s = delayed.DelayedBatchedZarrStore(\n",
-    "    q, output_dir / \"test_store/t={1}/roi={3}\", write_options=dict(chunks=(2, 1, 7))\n",
-    ")\n",
-    "shape = (5, 3)\n",
-    "s[1, 0, 0] = {2: dummy_value(shape, 12)}\n",
-    "s[0, 0, 0] = {2: dummy_value(shape, 11)}\n",
-    "s[2, 0, 0] = {2: dummy_value(shape, 22)}\n",
-    "s[2, 1, 0] = {2: dummy_value(shape, 88)}\n",
-    "s[3, 1, 0] = {2: dummy_value(shape, 99)}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39",
+   "id": "37",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +554,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40",
+   "id": "38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41",
+   "id": "39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -617,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42",
+   "id": "40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43",
+   "id": "41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44",
+   "id": "42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45",
+   "id": "43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46",
+   "id": "44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +647,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47",
+   "id": "45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48",
+   "id": "46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,6 +679,54 @@
     "    s[3, 0, 0] = dummy_value(shape, 33)\n",
     "    s.write()\n",
     "    q.poll()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx, shape in enumerate([None, (), (5,), (5, 3)]):\n",
+    "    # for idx, shape in enumerate([(5,)]):\n",
+    "    q = delayed.DelayedQueue()\n",
+    "    s = delayed.DelayedBatchedZarrStore(\n",
+    "        q,\n",
+    "        output_dir / (f\"test_store_{idx}\" + \"/t={1}\"),\n",
+    "        write_options=dict(chunks=(2, 1, 1, 1)),\n",
+    "    )\n",
+    "    value = (7, 2)\n",
+    "    s[1, 0, 0] = {value: dummy_value(shape, 12)}\n",
+    "    s[0, 0, 0] = {value: dummy_value(shape, 11)}\n",
+    "    s[2, 0, 0] = {value: dummy_value(shape, 22)}\n",
+    "    s[2, 1, 0] = {value: dummy_value(shape, 88)}\n",
+    "    s[3, 1, 0] = {value: dummy_value(shape, 99)}\n",
+    "    s.write(partial_chunks=False)\n",
+    "    q.poll()\n",
+    "    s[3, 0, 0] = dummy_value(shape, 33)\n",
+    "    s.write()\n",
+    "    q.poll()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q = delayed.DelayedQueue()\n",
+    "s = delayed.DelayedBatchedZarrStore(\n",
+    "    q, output_dir / \"test_store/ch={1}/fov={2}/roi={3}\", write_options=dict(chunks=(2,))\n",
+    ")\n",
+    "shape = (5, 3)\n",
+    "# t, ch, fov, roi\n",
+    "s[0, \"CFP\", 0] = {10: dummy_value(shape, 0), 12: dummy_value(shape, 10)}\n",
+    "s[1, \"CFP\", 0] = {10: dummy_value(shape, 1), 12: dummy_value(shape, 11)}\n",
+    "s[2, \"CFP\", 0] = {10: dummy_value(shape, 2), 12: dummy_value(shape, 12)}\n",
+    "s.write()\n",
+    "q.poll()"
    ]
   },
   {
